# declarations

./: .gitignore  README.md  dont_sleep.py  main.py  pyproject.toml  structure_of_project.txt  запуск программы мониторинга.bat  установка зависимостей.bat
monitoring/: add_international_docs.py  address_checkers.py  constants.py  document_dataclass.py  exceptions.py  functions_for_work_with_files_and_dirs.py  gold_data_manager.py  gold_get_all_applicant.py  launch_monitoring_package.py  logger_config.py  main_file.py  monitoring.py  monitoring_in_web.py  scrappers.py  supporting_functions.py  запуск программы мониторинга.bat  установка зависимостей.bat
monitoring/common/: constants.py  document_dataclass.py  exceptions.py  file_worker.py  logger_config.py  work_with_files_and_dirs.py
monitoring/gold/: data_manager.py  get_all_applicant.py  gold_manager.py  launch_and_navigate.py  screenshot_work.py
monitoring/monitoring_process/: monitoring_helpers.py  monitoring_in_web.py  process_result_file.py  to_finish_monitoring.py
monitoring/web/: add_international_docs.py  verify_addresses.py  work_with_browser.py
pdf_new/: ammendments_to_pdf.py  compare_xlsx_and_pdf.py  work_with_pdf.py
pdf_through/: ammendments_to_pdf.py  compare_xlsx_and_pdf.py  work_with_pdf.py
selenium_through/: amend_web_data.py  ammendments.py  compare_xlsx_and_web.py  config.py  converters_to_xlsx_data.py  data_scrapper.py  launch_code.py  main.py  supporting_functions.py
selenium_through/certificates/: ammendments_certificate.py  certificate_compare.py
(+6 files in other folders)
