[tool.poetry]
name = "someproject"
version = "0.1.0"
description = ""
authors = ["'ruslan'"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.2"
playwright = "^1.39.0"
pylint = "^3.0.2"
numpy = "^1.26.2"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
