[tool.poetry]
name = "someproject"
version = "0.1.0"
description = ""
authors = ["'ruslan'"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.3"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.2"
pylint = "^3.0.2"
numpy = "^1.26.2"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
opencv-python = "^4.8.1.78"
imutils = "^0.5.4"
easyocr = "^1.7.1"
matplotlib = "^3.8.2"
pyautogui = "^0.9.54"
pyperclip = "^1.8.2"
psutil = "^5.9.8"
pygetwindow = "^0.0.9"
fake-useragent = "^1.5.1"
logging = "^0.4.9.6"
py-win-keyboard-layout = "^0.2"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
